fix: only wrap top level section in article

--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,61 +1,65 @@
 .project {
   section {
-    @apply my-40 w-full grid gap-10 gap-y-0 grid-cols-8 items-baseline tablet:(grid-cols-6 children:(col-span-5) ) phone:(grid-cols-4 gap-4 children:(col-span-full) ) children:(col-start-3 col-span-3) ;
-  }
+    @apply my-40 w-full grid gap-10 gap-y-0 grid-cols-8 items-baseline tablet:(grid-cols-6 children:(col-span-5) ) phone:(grid-cols-4 gap-4 children:(col-span-full) ) all:(col-start-3 col-span-3) ;
 
-  h2 {
-    @apply font-650;
-  }
+    h2 {
+      @apply font-650;
+    }
 
-  h3 {
-    @apply font-575;
-  }
+    h3 {
+      @apply font-575 *hstack;
+    }
 
-  image-wrap {
-    @apply mb-10 block;
+    image-wrap {
+      @apply mb-10 block;
 
-    &[full='true'] {
-      @apply rounded-lg my-40 w-full col-start-1 col-span-8 block justify-self-center overflow-hidden tablet:(my-20) phone:(my-10);
+      &[full='true'] {
+        @apply rounded-lg my-40 w-full col-start-1 col-span-8 block justify-self-center overflow-hidden tablet:(my-20) phone:(my-10);
 
-      caption {
-        @apply text-fg-secondary;
+        caption {
+          @apply text-fg-secondary;
+        }
+      }
+
+      &:not([full='true']) {
+        @apply col-start-2 col-span-6;
       }
     }
-  }
 
-  blockquote {
-    @apply bg-surface border-border rounded-sm border-l-2 shadow-sm -my-2 -mx-5 mb-10 py-2 px-5 phone:(px-3 -mx-3) ;
+    blockquote {
+      @apply bg-surface border-border rounded-sm border-l-2 shadow-sm -my-2 -mx-5 mb-10 py-2 px-5 phone:(px-3 -mx-3) ;
 
-    * {
-      @apply font-semibold text-lg leading-9;
+      * {
+        @apply font-semibold text-lg leading-9;
+      }
+
+      p {
+        @apply m-0 p-0;
+      }
     }
 
-    p {
-      @apply m-0 p-0;
-    }
-  }
-
-  grid {
-    @apply grid gap-x-10 grid-cols-4 col-start-3 col-span-4 phone:(col-start-1) children:(col-span-2);
-  }
-
-  gallery {
-    @apply mt-40 grid col-span-full gap-x-6 grid-cols-[5fr,3fr] col-start-1 items-end;
-
-    & :first-child {
-      @apply col-start-1;
+    grid {
+      @apply grid gap-x-10 grid-cols-4 col-start-3 col-span-4 phone:(col-start-1) children:(col-span-2);
     }
 
-    & :not(:first-child) {
-      @apply col-start-2;
-    }
+    gallery {
+      @apply mt-40 grid col-span-full gap-x-6 grid-cols-[5fr,3fr] col-start-1 items-end;
 
-    image-wrap caption {
-      @apply mt-2;
-    }
+      :first-child {
+        @apply col-auto col-start-1;
+      }
 
-    img {
-      @apply rounded-xl shadow;
+      :not(:first-child) {
+        @apply col-auto col-start-2;
+      }
+
+      image-wrap caption {
+        @apply mt-2;
+      }
+
+      img {
+        @apply rounded-xl shadow;
+      }
     }
   }
 }
